# dspeed-cpp-procs

./: .gitmodules  README.md  pyproject.toml  setup.cfg  setup.py
src/dspeedcpp/: __init__.py  aligned_ndarray.py
src/dspeedcpp/src/: convolve.hh  derivative.hh  dspeedcpp_module.cpp  eigen_extend.hh  eigen_ufunc.hh  fft.hh  mean.hh  pole_zero.hh  trap_filter.hh  trap_norm.hh
