[metadata]
name = dspeedcpp
description = Python package with SIMD accelerated DSP algorithms

[options]
packages = find:
install_requires =
    numpy>=1.21
python_requires = >=3.9
include_package_data = True
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src
exclude =
    src/dspeedcpp/src/*.cpp
    src/dspeedcpp/src/*.hh
